--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae, veritatis?</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo dignissimos nemo non iste voluptates nihil sit in beatae deserunt debitis!</p>
-    
+    <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Contact</li>
+    </ul>
 </body>
 </html>
